test/Errors/Errors.fs
BEGINPROG Errors
/* Demonstration of a combined error detected by the scanner 
and an other error detected by the sparser
*/

a == 2
b + 1 := CE

ENDPROG
