test/Errors/Errors.output
PROGNAME ERROR :CE
Error at line 6, at position 2, expected ASSIGN but got EQ